--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="row  m-0 w-100 overflow-hidden"  >
+    <div class="row  m-0 w-100 overflow-hidden">
         <!-- menu -->
         <nav class=" navbar  navbar-expand-lg navbar-light p-0 position-fixed"
             style="background-color: #2b2b2b !important;">
@@ -186,10 +186,10 @@
                                     <li class="w-25 d-flex align-items-center h-100 ">
 
                                         <p class="text-justify h-75 d-flex align-items-center p-2 m-0">Lorem ipsum dolor
-                                        sit amet consectetur
-                                        adipisicing elit.
-                                        Neque illum praesentium reprehenderit saepe debitis adipisci, repellat
-                                        maiores expedita magni unde </p>
+                                            sit amet consectetur
+                                            adipisicing elit.
+                                            Neque illum praesentium reprehenderit saepe debitis adipisci, repellat
+                                            maiores expedita magni unde </p>
                                     </li>
                                     <li
                                         class="position-relative w-25 d-flex align-items-center p-2 justify-content-center">
@@ -220,12 +220,12 @@
                                     <li class="w-25 d-flex align-items-center h-100 ">
 
                                         <p class="text-justify h-75 d-flex align-items-center p-2 m-0">Lorem ipsum dolor
-                                        sit amet consectetur
-                                        adipisicing elit.
-                                        Neque illum praesentium reprehenderit saepe debitis adipisci, repellat
-                                        maiores expedita magni undeimac6
-                                    imac7
-                                </p>
+                                            sit amet consectetur
+                                            adipisicing elit.
+                                            Neque illum praesentium reprehenderit saepe debitis adipisci, repellat
+                                            maiores expedita magni undeimac6
+                                            imac7
+                                        </p>
                                     </li>
                                     <li
                                         class="position-relative w-25 d-flex align-items-center p-2 justify-content-center">
@@ -418,7 +418,7 @@
                 </div>
 
                 <div href="#" class="ulsupport ms-5 w-100  collapse d-lg-none  position-absolute   h-100"
-                    id="navbarSupportedContent2" style="  ">
+                    id="navbarSupportedContent2">
                     <ul class="list-unstyled d-flex gap-4  ">
                         <li class=""> <a style="line-height: 50px; font-size: 16px !important; z-index: 10;"
                                 href="#">iPad</a></li>
@@ -427,8 +427,10 @@
                         <li class="support" data-mdb-toggle="dropdown"> <a class=" dropdown-toggle  dropdown " href="#"
                                 style="line-height: 50px; font-size: 16px !important; z-index: 10;">Support</a></li>
 
-                        <div class=" supportdiv  dropdown-menu w-75 text-white  " style="  background-color:#2b2b2b !important;">
-                            <p class="p-3 text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi voluptas
+                        <div class=" supportdiv  dropdown-menu w-75 text-white  "
+                            style="  background-color:#2b2b2b !important;">
+                            <p class="p-3 text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi
+                                voluptas
                                 aliquam ad eum dolorem explicabo! Amet autem cum placeat similique illo at corporis
                                 ipsa, iusto, dicta libero et assumenda natus!</p>
                         </div>
@@ -437,9 +439,6 @@
 
 
                 </div>
-
-
-
 
             </div>
 
@@ -451,13 +450,13 @@
         <div class="parallax position-absolute w-100 p-0 m-0" style="top: 50px !important;">
             <div class="row p-0 m-0 w-100  h-100">
                 <div class="col-12 p-0 h-100  d-flex justify-content-center"
-                    style="background-image: url(./images/apple.jpg); background-size: cover; background-repeat: no-repeat;background-position: center center;">
+                    style="background-image: url(./images/apple.jpg); background-size: cover; background-repeat: no-repeat;background-position: center center; ">
                     <div class="col-sm-12 col-12  col-xl-6 d-flex flex-column  text-justify position-absolute    text-white text-center justify-content-center"
                         style="transform: translateY(50%) !important;">
                         <h2 class="text-white text-capitalize text-center">iphone 14 Pro</h2>
                         <div class="row col-10 offset-1 col-sm-8 offset-sm-2 ">
-                            <a href="" class="text-capitalize  col-4 offset-2 p-0">learn more ></a>
-                            <a class="text-capitalize col-4 p-0 " href="">buy ></a>
+                            <a href="#" class="text-capitalize  col-4 offset-2 p-0">learn more ></a>
+                            <a class="text-capitalize col-4 p-0 " href="#">buy ></a>
                         </div>
                     </div>
 
@@ -465,7 +464,34 @@
             </div>
         </div>
         <!-- end parallax -->
+        <!-- backdrop -->
         <div class="backdrop"></div>
+        <!-- end backdrop -->
+        <!-- grid -->
+        <div class="grid-container text-center">
+
+            <div class="item item-1 position-relative">
+                <figure class="grid-1-1 w-100 h-100 "></figure>
+            </div>
+            <div class="item item-1-2 position-relative">
+                <figure class="grid-1-2 w-100 h-100 "></figure>
+            </div>
+            <div class="item item-2 position-relative">
+                <figure class="grid-2-1 w-100 h-100 "></figure>
+            </div>
+            <div class="item item-2-2 position-relative">
+                <figure class="grid-2-2 w-100 h-100 "></figure>
+            </div>
+            <div class="item item-3 position-relative">
+                <figure class="grid-3 w-100 h-100 "></figure>
+            </div>
+            <div class="item item-4 position-relative">
+                <figure class="grid-4 w-100 h-100 "></figure>
+            </div>
+
+
+        </div>
+        <!-- end grid -->
 
     </div>
 
