--- a/index.html
+++ b/index.html
@@ -470,23 +470,71 @@
         <!-- grid -->
         <div class="grid-container text-center">
 
-            <div class="item item-1 position-relative">
-                <figure class="grid-1-1 w-100 h-100 "></figure>
+            <div class="item item-1 position-relative ">
+
+                <figure class="grid-1-1 w-100 h-100 d-flex flex-column align-items-center p-3">
+                    <h2 class="" style="font-weight: 600 !important;">iMac</h2>
+                    <h6 class="">Packed with more juice</h6>
+                    <h6 class="">available starting 11.7</h6>
+                    <div class="d-flex justify-content-center w-100">
+                        <a href="#" class="mx-2">learn more ></a><a href="#" class="mx-2">order now ></a>
+                    </div>
+                </figure>
             </div>
             <div class="item item-1-2 position-relative">
-                <figure class="grid-1-2 w-100 h-100 "></figure>
+                <figure class="grid-1-2 w-100 h-100 d-flex flex-column align-items-center p-3 text-white">
+                    <h2 class="" style="font-weight: 600 !important;">Wonder awaits.</h2>
+                    <h6 class="">Packed with more juice</h6>
+                    <h6 class="">available starting 11.7</h6>
+                    <div class="d-flex justify-content-center w-100">
+                        <a href="#" class="mx-2">learn more ></a><a href="#" class="mx-2">order now ></a>
+                    </div>
+                </figure>
             </div>
             <div class="item item-2 position-relative">
-                <figure class="grid-2-1 w-100 h-100 "></figure>
+                <figure class="grid-2-1 w-100 h-100 d-flex flex-column align-items-center p-3">
+                    <h2 class="d-flex justify-content-around align-items-center" style="font-weight: 600 !important; ">
+                        <i class="bi bi-apple"></i>Watch</h2>
+                    <h6 class="">Packed with more juice</h6>
+                    <h6 class="">available starting 11.7</h6>
+                    <div class="d-flex justify-content-center w-100">
+                        <a href="#" class="mx-2">learn more ></a><a href="#" class="mx-2">order now ></a>
+                    </div>
+                </figure>
             </div>
             <div class="item item-2-2 position-relative">
-                <figure class="grid-2-2 w-100 h-100 "></figure>
+                <figure class="grid-2-2 w-100 h-100 d-flex flex-column align-items-center p-3 text-white">
+                    <h2 class="" style="font-weight: 600 !important;">AirPods Pro</h2>
+                    <h6 class="">Packed with more juice</h6>
+                    <h6 class="">available starting 11.7</h6>
+                    <div class="d-flex justify-content-center w-100">
+                        <a href="#" class="mx-2">learn more ></a><a href="#" class="mx-2">order now ></a>
+                    </div>
+                </figure>
             </div>
             <div class="item item-3 position-relative">
-                <figure class="grid-3 w-100 h-100 "></figure>
+                <figure class="grid-3 w-100 h-100 d-flex flex-column align-items-center p-3">
+                    <h2 class="d-flex justify-content-around align-items-center" style="font-weight: 600 !important;">
+                        <i class="bi bi-apple"></i>
+                        Card
+                    </h2>
+                    <h6 class="">Packed with more juice</h6>
+                    <h6 class="">available starting 11.7</h6>
+                    <div class="d-flex justify-content-center w-100">
+                        <a href="#" class="mx-2">learn more ></a><a href="#" class="mx-2">order now ></a>
+                    </div>
+                </figure>
             </div>
             <div class="item item-4 position-relative">
-                <figure class="grid-4 w-100 h-100 "></figure>
+                <figure class="grid-4 w-100 h-100 d-flex flex-column align-items-center p-3">
+                    <h2 class="d-flex justify-content-around align-items-center" style="font-weight: 600 !important;"><i
+                            class="bi bi-apple"></i>TradeIn</h2>
+                    <h6 class="">Packed with more juice</h6>
+                    <h6 class="">available starting 11.7</h6>
+                    <div class="d-flex justify-content-center w-100">
+                        <a href="#" class="mx-2">learn more ></a><a href="#" class="mx-2">order now ></a>
+                    </div>
+                </figure>
             </div>
 
 
