--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Proje</title>
+    <title>Apple</title>
     <link rel="stylesheet" href="./css/main.css">
-
+<link rel="shortcut icon" href="./images/appleicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./bootstrap-icons.css">
     <link rel="stylesheet" href="./fonts/bootstrap-icons.woff">
     <link rel="stylesheet" href="./mdb.min.css">
